--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 	<script src="javascript/a.js" type="text/javascript" charset="utf-8"></script>
 	<script src="javascript/b.js" type="text/javascript" charset="utf-8"></script>
 	<script src="javascript/d.js" type="text/javascript" charset="utf-8"></script>
+	<script src="javascript/main.js" type="text/javascript"></script>
 </body>
 </html>
