changed spanish to morse

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<select id="language-selected">
 		<option selected disabled="">Pick a Language</option>
 		<option value="russian">Russian</option>
-		<option value="spanish">Spanish</option>
+		<option value="morse">Morse</option>
 		<option value="elvish">Elvish</option>
 	</select>
 	<br>
