--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
 	<script src="javascript/b.js" type="text/javascript" charset="utf-8"></script>
 	<script src="javascript/d.js" type="text/javascript" charset="utf-8"></script>
 	<script src="javascript/main.js" type="text/javascript"></script>
+	<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 </body>
 </html>
