Change from russian to latin

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="input-field col s4 offset-s4">
 		    <select id="language-selected">
 		      <option value="" disabled selected>Choose your option</option>
-		      <option value="russian">Russian</option>
+		      <option value="latin">Latin</option>
 		      <option value="morse">Morse</option>
 		      <option value="elvish">Elvish</option>
 		    </select>
