--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
 	<div class="row">
-		<h1 class="col s8 offset-s2">
+		<h1 class="col s12 m8 offset-m2">
 			Tripple Threat Translator
 		</h1>
 	</div>
 	<div class="row">
 	    <form class="col s12">
 	      <div class="row">
-	        <div class="input-field col s4 offset-s4">
+	        <div class="input-field col s12 m4 offset-m4">
 	          <textarea id="input-field" class="materialize-textarea"></textarea>
 	          <label for="input-field">Translate Here:</label>
 	        </div>
@@ -29,7 +29,7 @@
 	    </form>
   	</div>
   	<div class="row">
-		<div class="input-field col s4 offset-s4">
+		<div class="input-field col s12 m4 offset-m4">
 		    <select id="language-selected">
 		      <option value="" disabled selected>Choose your option</option>
 		      <option value="latin">Latin</option>
@@ -42,12 +42,12 @@
 
 
 	<div class="row">
-		<button type="button" id="translate-button" class="btn waves-effect waves-light col s4 offset-s4">Translate</button>
+		<button type="button" id="translate-button" class="btn waves-effect waves-light col s12 m4 offset-m4">Translate</button>
 	</div>
 
 
 	<div class="row">
-		<div id="translated" class="col s8 offset-s2 flow-text card-panel teal lighten-4"></div>
+		<div id="translated" class="col s12 m8 offset-m2 flow-text card-panel teal lighten-4"></div>
 	</div>
 
 	<script src="javascript/a.js" type="text/javascript" charset="utf-8"></script>
