--- a/index.html
+++ b/index.html
@@ -10,10 +10,66 @@
   	crossorigin="anonymous"></script>
  	 <!-- Compiled and minified JavaScript -->
  	 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-          
+     <link rel="stylesheet" type="text/css" href="styles.css"> 
 </head>
+
 <body>
+<div class="row cyan lighten-2 card-panel" id="header">
+		<h1 class="col s12">
+			Tripple Threat Translator
+		</h1>
+</div>
+<div class="parallax-container">
+    <div class="parallax"><img src="Cool-Wallpapers.jpg"></div>
+  </div>
+  <div class="section white">
+    <div class="row container">
+     <div class="row">
+		<h3 class="col m8 s12 offset-m3">
+			Start Translating Below
+		</h3>
+     </div>
 	<div class="row">
+	    <form class="col s12">
+	      <div class="row">
+	        <div class="input-field col s12 m4 offset-m4">
+	          <textarea id="input-field" class="materialize-textarea"></textarea>
+	          <label for="input-field">Translate Here:</label>
+	        </div>
+	      </div>
+	    </form>
+  	</div>
+  	<div class="row">
+		<div class="input-field col s12 m4 offset-m4">
+		    <select id="language-selected">
+		      <option value="" disabled selected>Choose your option</option>
+		      <option value="latin">Latin</option>
+		      <option value="morse">Morse</option>
+		      <option value="elvish">Elvish</option>
+		    </select>
+		    <label>Pick a Language</label>
+		 </div>
+	</div>
+
+
+	<div class="row">
+		<button type="button" id="translate-button" class="btn waves-effect waves-light col s12 m4 offset-m4">Translate</button>
+	</div>
+
+
+	<div class="row">
+		<div id="translated" class="col s12 m8 offset-m2 flow-text card-panel teal lighten-4"></div>
+	</div>
+
+
+
+    </div>
+
+  </div>
+
+
+
+	<!-- <div class="row">
 		<h1 class="col s12 m8 offset-m2">
 			Tripple Threat Translator
 		</h1>
@@ -48,7 +104,7 @@
 
 	<div class="row">
 		<div id="translated" class="col s12 m8 offset-m2 flow-text card-panel teal lighten-4"></div>
-	</div>
+	</div> -->
 
 	<script src="javascript/a.js" type="text/javascript" charset="utf-8"></script>
 	<script src="javascript/b.js" type="text/javascript" charset="utf-8"></script>
